--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "picocss-demo-nextjs",
+  "name": "yt2mp4",
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=18.17.0"
+    "node": "18.17.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -21,7 +21,7 @@
     "@ffmpeg/util": "^0.12.0",
     "@next/font": "13.1.2",
     "@picocss/pico": "^1.5.6",
-    "@types/node": "18.11.18",
+    "@types/node": "18.17.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "dayjs": "^1.11.7",
