--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.4",
-    "youtube-dl-exec": "^2.4.7",
-    "ytdl-core": "^4.11.5"
+    "youtube-dl-exec": "^2.4.7"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
