--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "18.17.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@vercel/analytics": "^1.0.2",
     "dayjs": "^1.11.7",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
