--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.4",
-    "youtube-dl-exec": "^2.4.7"
+    "youtube-dl-exec": "^2.4.7",
+    "ytdl-core": "^4.4.1"
   },
   "engines": {
     "node": "18.16.1"
